--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,3 +66,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
